# seq

./: CMakeLists.txt  README.md  plugin.toml  seq.cpp
.github/actions/build-manylinux/: Dockerfile  entrypoint.sh
.github/build-linux/: entrypoint.sh
.github/workflows/: ci.yml
ir/: pipeline.cpp  pipeline.h  revcomp.cpp  revcomp.h  seq.cpp
stdlib/bio/: align.codon  bam.codon  bed.codon  bwa.codon  fasta.codon  fastq.codon  fmindex.codon  intervals.codon  iter.codon  locus.codon  pseq.codon  seq.codon  vcf.codon
sw/: intersw.cpp  intersw.h  ksw2.h  ksw2_extd2_sse.cpp  ksw2_exts2_sse.cpp  ksw2_extz2_sse.cpp  ksw2_gg2_sse.cpp
test/: main.cpp
test/apps/avid/: avid.codon
test/apps/cora/: hom_exact.codon  hom_inexact.codon
test/apps/mrsfast/: mrsfast.codon
test/bench/: 16mer.codon  bedcov.codon  cpg.codon  fasta.codon  kmercnt.codon  knucleotide.codon  rc.codon  revcomp.codon
test/core/: bwtsa.codon  containers.codon  kmers.codon  serialization.codon
